Fix initiatives card header spacing and begin work on initiative roles

--- a/client/src/styles/base.scss
+++ b/client/src/styles/base.scss
@@ -124,6 +124,12 @@ p {
   color: $btnCyan;
 }
 
+.header-3-section-lead {
+  font-family: 'Museo-900';
+  font-weight: 900;
+  color: $btnCyan;
+}
+
 .header-3-section-breaker {
   font-family: 'Museo-900';
   font-weight: 900;
